unpackaged/main/default/objects/pse__Time_Variance_Calculation__c/pse__Time_Variance_Calculation__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__TimeVarianceHelp</customHelpPage>
    <description>A container object holding information on time variance calculations on the difference between a resource’s standard working hours and approved working hours for a calendar week.  Time variance calculation and detail records are created when you calculate time variance for a region, practice, or group. FinancialForce PSA calculates time variance as a percentage based on the number of approved working hours divided into the number of recorded working hours. You can reflect this as a percentage or as strict hours. Run time variance reports on the information stored in this object to understand how your resources are over-scheduled or under-scheduled with their work hours.</description>
    <label>Time Variance Calculation</label>
    <nameField>
        <label>Time Variance Calculation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Variance Calculations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>