unpackaged/main/default/objects/pse__Time_Variance_Calculation__c/fields/pse__Allowed_Variance_Over__c.field-meta.xml
<CustomField>
    <fullName>pse__Allowed_Variance_Over__c</fullName>
    <label>Allowed Variance Over</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>