unpackaged/main/default/objects/pse__Time_Variance_Calculation__c/fields/pse__Include_Sublevels__c.field-meta.xml
<CustomField>
    <fullName>pse__Include_Sublevels__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select to generate the time variance calculations based on all sub-levels of the selected region, practice or group.</inlineHelpText>
    <label>Include Sublevels</label>
    <type>Checkbox</type>
</CustomField>