unpackaged/main/default/objects/pse__Time_Variance_Calculation__c/fields/pse__Practice__c.field-meta.xml
<CustomField>
    <fullName>pse__Practice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Practice</label>
    <referenceTo>pse__Practice__c</referenceTo>
    <relationshipLabel>Time Variance Calculations</relationshipLabel>
    <relationshipName>Time_Variance_Calculations</relationshipName>
    <type>Lookup</type>
</CustomField>